# instant_ws

./: .gitignore  CLAUDE.md  README.md  frames.gv  output.avi  record.py
AIUI/log/: log_map
build_isolated/: catkin_make_isolated.cache
build_isolated/eigen_conversions/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/geometry/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/geometry2/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/kdl_conversions/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/my_planner/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/navigation/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/speech_command/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/test/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_generated/: generate_cached_setup.py  setup_cached.sh
catkin_generated/installspace/: my_planner.pc  my_plannerConfig.cmake
devel_isolated/eigen_conversions/: .catkin  .rosinstall  setup.sh
devel_isolated/geometry/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel_isolated/geometry2/: .catkin  setup.sh
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
speech_temp/: spark_llm_node.py
src/flow_end/: CMakeLists.txt  INITIAL_TURN_INTEGRATION_DEV.md  PARKING_LOGIC.md  VIDEO_RECORD_USAGE.md
src/flow_end/Md/: IMPROVEMENT_PLAN.md  INITIAL_TURN_INTEGRATION_DEV.md  INITIAL_TURN_UPDATE_REPORT.md
src/flow_end/include/flow_end/: Callback.h  Callback_test.h  Findline_Adaptive.h  ImagePerspectiveInit.h  Laser_linear.h  MatTransform.h  PID.h  Point_Process.h  Signal.h  corner_move.h  follow.h  follow_line.h  follow_line_test.h  follow_motion_controller.h  generateLookupTable.h  process_image.h  track_line.h
src/flow_end/launch/: follow_end.launch  follow_test.launch  follow_voice_stack.launch  image_process_debug.launch
src/flow_end/src/: Callback.cpp  Callback_test.cpp  Findline_Adaptive.cpp  ImagePerspectiveInit.cpp  Laser_linear.cpp  MatTransform.cpp  PID.cpp  Point_Process.cpp  Signal.cpp  corner_move.cpp  follow.cpp  follow_line.cpp  follow_line_test.cpp  follow_motion_controller.cpp  follow_test.cpp  generateLookupTable.cpp  image_process_debug.cpp  process_image.cpp  track_line.cpp
src/obstacle_avoidance/: CMakeLists.txt  package.xml
src/obstacle_avoidance/scripts/: collision_avoider.py
src/playsound/: trans  (+1 more)
src/traffic_light_vision/: CMakeLists.txt  package.xml
src/traffic_light_vision/launch/: traffic_light_detector.launch
src/traffic_light_vision/scripts/: traffic_light_detector.py
temp/: clean.sh  full_system_start.sh  image_start  image_start.sh  start.sh
url_result/: qr_code_result_20260506_185442.bag.active  qr_code_result_20260506_200052.bag.active  qr_code_result_20260509_173526.bag.active
(+271 files in other folders)
