<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_vision</name>
  <version>0.0.1</version>
  <description>Traffic light vision detector for ucar camera images.</description>

  <maintainer email="ucar@example.com">ucar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
